flatpak: Address transaction progress skipping

Flatpak transaction progress skips back and forth as it is reported
according its different operations.
Report the progress according equally split among the different
operations.

BUG: 404819
BUG: 434948
BUG: 435450
BUG: 448280


(cherry picked from commit 8226ddf15fd7f04b18fc2d2f571215b695a9b2bb)